--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body{
     left: 42px;
     z-index: 2;
 
-    background: url(img/dino.png) repeat-x 0px 0px;
+    background: url(img/Dino.png) repeat-x 0px 0px;
     background-size: 336px 84px;
     background-position-x: 0px;
 
